--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,7 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^2.0.1
+  # Use with the CupertinoIcons class for iOS style icons
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +34,7 @@ dev_dependencies:
   webview_flutter: ^2.0.13
   flutter_feather_icons: ^2.0.0+1
   url_launcher: ^6.0.10
+  onesignal_flutter: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
